@@ -25,9 +25,6 @@
               <tag:img id="dsSaveImg" png="save" onclick="saveDataSource()" title="common.save"/>
 
                 <tag:img png="emport" title="emport.export" onclick="exportDataSource()"/>
-              <m2m2:moduleExists name="mangoApi">
-                <tag:img png="csv" title="emport.exportDataPointsAsCsv" onclick="exportDataSourcePointsFromEditingSource();"/>
-              </m2m2:moduleExists>
             </td>
           </tr>
         </table>
